# TallyMCPServer

./: .env.example  .gitignore  DEPLOY-GCP.md  Dockerfile  README.md  deploy-gcp.bat  deploy-gcp.sh  pyproject.toml
.github/workflows/: run_pipeline.yml
pwa/: index.html
receivables-dashboard/: .env.example  .gitignore  README.md  api_test.txt  build_dashboard.py  build_party_details.py  fetch_data.py  fetch_ledgers.py  fetch_place_names.py  fix_map.py  main.py  parse_recv.py  party_emails.json  party_phones.json  patch_table.py  requirements.txt  run_data_agent.py  run_fetch.py  send_reminders.py  send_whatsapp.py
receivables-dashboard/output/: build_map_data.py  dashboard.html  fetch_data.py  map.html
receivables-dashboard/pipeline/: __init__.py  agents.py  orchestrator.py
receivables-dashboard/utils/: __init__.py  display.py
src/tallyprime_mcp/: __init__.py  server.py  server_http.py  tally_client.py
web-data-pipeline/: .env.example  README.md  main.py  requirements.txt
web-data-pipeline/pipeline/: __init__.py  agents.py  orchestrator.py
web-data-pipeline/utils/: __init__.py  display.py
